some redaction, gramatical mistakes

--- a/thesis/EE-dyplom.tex
+++ b/thesis/EE-dyplom.tex
@@ -45,8 +45,8 @@
 \title{Aplikacja internetowa do zarządzania fiszkami}
 \engtitle{A web app for managing flashcards }
 \album{325473}
-\author{inż. Michał Jagodziński}
-\promotor{inż. Marek Wdowiak}
+\author{Michał Jagodziński}
+\promotor{mgr. inż. Marek Wdowiak}
 \date{2025}
 \longdate{2025-12-31}
 
